<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragment.DetailActivityFragment">

        <TextView
            android:id="@+id/fragmentDetailActivity_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"/>

        <com.myprog.sportlife.CustomView.SunburstChart
            android:id="@+id/fragmentDetailActivity_Canvas"
            android:layout_width="match_parent"
            android:layout_height="350dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="4dp"
                    android:layout_gravity="center"
                    android:tint="@color/blue"
                    android:src="@drawable/clock_with_white_face"/>

                <TextView
                    android:id="@+id/fragmentDetailActivity_Time"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="4dp"
                    android:layout_gravity="center"
                    android:tint="@color/yellow"
                    android:src="@drawable/flame"/>

                <TextView
                    android:id="@+id/fragmentDetailActivity_Kal"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="4dp"
                    android:layout_gravity="center"
                    android:tint="@color/red"
                    android:src="@drawable/footstep_64"/>

                <TextView
                    android:id="@+id/fragmentDetailActivity_Step"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/detailActivityFragmentTextDistance"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/fragmentDetailActivity_LineChart"
            android:layout_height="210dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/fragmentDetailActivity_CountTraining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/blue"
                    android:text="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center_horizontal"
                    android:text="@string/detailActivityFragmentCountTraining"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/fragmentDetailActivity_AverageStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/yellow"
                    android:text="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center_horizontal"
                    android:text="@string/detailActivityFragmentAverageStar"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/fragmentDetailActivity_NoTraining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/red"
                    android:layout_marginBottom="5dp"
                    android:text="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center_horizontal"
                    android:text="@string/detailActivityFragmentNoTraining"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</ScrollView>